# oop_labs

./: CMakeLists.txt  binary.cpp  binary.h  check.cpp  check.h  container.h  fcollection.cpp  fcollection.h  figure.cpp  figure.h  functions.cpp  functions.h  hexagon.cpp  hexagon.h  main.cpp  pentagon.cpp  pentagon.h  point.cpp  point.h  rhombus.cpp  rhombus.h  test.cpp
include/: fight.h
src/: main.cpp
